[package]
edition = "2021"
name = "binary-options-tools"
version = "0.1.1"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.16.17", default-features = false, features = [
    "napi4",
    "tokio_rt",
    "serde-json",
] }
napi-derive = "2.12.2"
binary-options-tools = { path = "../crates/binary_options_tools", version = "0.1.7" }
thiserror = "2.0.12"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
uuid = "1.16.0"
tracing = "0.1.41"
tokio = "1.44.2"
futures-util = "0.3.31"
url = "2.5.4"
chrono = "0.4.41"
regex = "1.11.1"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
once_cell = "1.21.3"

[build-dependencies]
napi-build = "2.1.6"

[profile.release]
lto = true
strip = "symbols"
